tests/derive_ui/value_enum_fallback_two_fields.rs
use clap::ValueEnum;

#[derive(ValueEnum, Clone, Debug)]
enum Opt {
    #[clap(fallback)]
    First(String, String),
}

fn main() {}

